crates/kdl-config-derive/tests/ui/flag_non_bool.stderr
error: flag placement is only valid for bool fields
 --> tests/ui/flag_non_bool.rs:5:6
  |
5 |     #[kdl(attr, flag)]
  |      ^^^^^^^^^^^^^^^^^
